# Mandelbrot

./: .gitignore  README.md  index.html  main.go  settings.html
cpp-cpu/: .clang-tidy  CMakeLists.txt  flake.nix
cpp-cpu/src/: main.cpp  wayland.cpp  wayland.hpp
cpp-opengl/: CMakeLists.txt  main.cpp  mandelbrot.frag  mandelbrot.vert
cpp-opengl/src/: main.cpp
css/: index.css
js/: mandelbrot.js  settings.js
web/: index.html  settings.html
web/css/: settings.css
web/js/: mandelbrot.js
